# xiaomi-camera-merge

./: .dockerignore  Cargo.toml  Dockerfile  README.md  README_Synology.md  README_zh.md  SCHEDULE_EXAMPLES.md  build.sh  docker-compose.scheduled.yml  docker-compose.yml
.cursor/rules/: gen_rules  xiaomi-camera-merge.mdc
src/: main.rs
